--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head></head>
     <body>
         <h1>This is a Header</h1>
-       <p>This is a paragraph</p> 
+       <p>This is a paragraph</p>
+       <p><b>This is a second paragraph</b></p> 
     </body>
 </html>
